# rust-falcon512

./: .gitignore  Cargo.toml  OPTIMIZATION_NOTES.md  README.md  distances.json  falcon512_samples.json  package-lock.json  run_benchmark.sh  rust-toolchain  samples_to_rust_tests.js
.cargo/: config.toml
.github/: ci.yaml
benches/: benchmark.rs  instr_count.rs
benches/shared/: mod.rs
examples/: benchmark.rs
src/: constants.rs  falcon512.rs  lib.rs  shake256-old.rs  shake256.rs  tests.rs  utils.rs
src/tests/: falcon512_fuzz_tests.rs  falcon512_tests_0.rs  falcon512_tests_1.rs  falcon512_tests_2.rs  falcon512_tests_3.rs  falcon512_tests_4.rs  falcon512_tests_5.rs  falcon512_tests_6.rs  falcon512_tests_7.rs  falcon512_tests_8.rs  falcon512_tests_9.rs  fuzz_capture.rs  hash_to_point_ab.rs  test_utils.rs
z3/: lazy_ntt_bounds.py
