[package]
name = "falcon512_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "falcon512_rs"
crate-type = ["cdylib", "lib"]

[dev-dependencies]
num-format = "0.4.4"
jemallocator = "0.5.4"
jemalloc-ctl = "0.5.4"
rand = "0.9.2"

[features]
default = []
bench = []

[profile.dev]
codegen-units = 1
opt-level = 3
lto = "fat"
overflow-checks = false
debug = true

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"
overflow-checks = false
strip = true
debug = false

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
