[package]
name = "falcon512_rs"
version = "0.1.0"
edition = "2021"
description = "Pure Rust implementation of Falcon-512 signature scheme"
license = "Apache-2.0"
authors = ["wh173-c47 <wh173-c47>"]
repository = "https://github.com/wh173-c47/rust-falcon512"
documentation = "https://docs.rs/falcon512_rs"
readme = "README.md"
keywords = ["falcon", "post-quantum", "crypto", "signature", "nist"]
categories = ["cryptography", "post-quantum", "no-std", "algorithms"]

[lib]
name = "falcon512_rs"
crate-type = ["cdylib", "lib"]

[dev-dependencies]
num-format = "0.4.4"
jemallocator = "0.5.4"
jemalloc-ctl = "0.5.4"
rand = "0.9.2"

[features]
default = []
bench = []

[profile.dev]
codegen-units = 1
opt-level = 3
lto = "fat"
overflow-checks = false
debug = true

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"
overflow-checks = false
strip = true

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
