[package]
name = "falcon512_rs"
version = "0.2.0"
edition = "2021"
description = "Pure Rust implementation of Falcon-512 signature scheme"
license = "Apache-2.0"
authors = ["wh173-c47 <wh173-c47>"]
repository = "https://github.com/wh173-c47/rust-falcon512"
documentation = "https://docs.rs/falcon512_rs"
readme = "README.md"
keywords = ["falcon", "post-quantum", "crypto", "signature", "nist"]
categories = ["cryptography", "no-std", "algorithms"]

[lib]
name = "falcon512_rs"
crate-type = ["cdylib", "lib"]

[dev-dependencies]
num-format = "0.4.4"
jemallocator = "0.5.4"
jemalloc-ctl = "0.5.4"
rand = "0.9.2"
iai-callgrind = "=0.3.1"
criterion = "0.7.0"

[features]
default = []
bench = []

[profile.dev]
codegen-units = 1
opt-level = 3
lto = "fat"
overflow-checks = false
debug = true

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"
overflow-checks = false
strip = true

# `cargo bench` profile. Same optimization as release, but symbols are kept (no strip)
# and debug info is on so callgrind/iai-callgrind can attribute instructions to the
# benchmarked function (toggle-collect needs the symbol). panic=abort is dropped because
# the bench harness requires unwinding support.
[profile.bench]
codegen-units = 1
opt-level = 3
lto = "fat"
overflow-checks = false
strip = false
debug = true

# Wall-clock benchmark (Criterion): ns / ops-sec.
[[bench]]
name = "benchmark"
harness = false

# Wall-clock benchmark (jemalloc + rdtsc): ns / CPU cycles / peak memory. Gated by `--features bench`.
[[bench]]
name = "wall_clock_benchmark"
harness = false

# Deterministic, CPU-load-agnostic instruction-count benchmark (valgrind/callgrind via iai-callgrind).
[[bench]]
name = "instr_count"
harness = false
